--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
+    <title>News-ON</title>
 </head>
 <body>
-    
-    <script src="main.js"></script>
+    <main class="container">
+        <header>
+            <div class="func_box"></div>
+            <div class="title">
+                <p>The News-ON Times</p>
+            </div>
+            <nav>
+                <button>Sport</button>
+                <button>Tech</button>
+                <button>World</button>
+                <button>Finance</button>
+                <button>Politics</button>
+                <button>Business</button>
+                <button>Economics</button>
+                <button>Entertainment</button>
+                <button>Beauty</button>
+                <button>Travel</button>
+                <button>Music</button>
+                <button>Food</button>
+                <button>Science</button>
+                <button>Gaming</button>
+                <button>Energy</button>
+            </nav>
+        </header>
+        <article class="headline">
+            <div class="list_hl" id="headline_list">
+                <div class="row card_hl">
+                    <div class="col-lg-4">
+                        <div class="img_box">
+                            <img src="/img/00040-2185387814.png">
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="article_box">
+                            <h2>AI로 만드는 디자인 요소</h2>
+                            <p>Stable Defusion을 이용하여 만들어진 디자인 요소. <br> 그리고 이 사진 한장을 다시 AI를 이용해 멋진 동영상 바탕화면으로 만든 비결 공개</p>
+                            <div class="article_info">
+                                KBS * 2021-11-11
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>        
+        </article>
+    </main>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
