기능 작업 1차

--- a/index.html
+++ b/index.html
@@ -10,26 +10,25 @@
 <body>
     <main class="container">
         <header>
-            <div class="func_box"></div>
+            <div class="func_box">
+                <button> = </button>
+                <div class="search_box">
+                    <input type="text" placeholder="Search" id="search_box" class="hidden" />
+                    <button id="btn_search">검색</button>
+                </div>
+            </div>
             <div class="title">
-                <p>The News-ON Times</p>
+                <a href="/index.html"><p>The News-ON Times</p></a>
             </div>
             <nav>
-                <button>Sport</button>
-                <button>Tech</button>
-                <button>World</button>
-                <button>Finance</button>
-                <button>Politics</button>
+                <button class="selected">All</button>
+                <button>General</button>
                 <button>Business</button>
-                <button>Economics</button>
-                <button>Entertainment</button>
-                <button>Beauty</button>
-                <button>Travel</button>
-                <button>Music</button>
-                <button>Food</button>
+                <button>Technology</button>
                 <button>Science</button>
-                <button>Gaming</button>
-                <button>Energy</button>
+                <button>Health</button>
+                <button>Sports</button>
+                <button>Entertainment</button>
             </nav>
         </header>
         <article class="headline">
