--- a/index.html
+++ b/index.html
@@ -11,22 +11,32 @@
     <main class="container">
         <header>
             <div class="func_box">
-                <button> = </button>
-                <div class="search_box">
-                    <input type="text" placeholder="Search" id="search_box" class="hidden" />
-                    <button id="btn_search">검색</button>
+                <button onclick="toggleSide()" id="btn_hamburger" class="btn_hamburger d-lg-none">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </button>
+                <button id="toggle_search" onclick="toggleSearchBox()">
+                    <svg width="40" height="40" viewBox="0 0 40 40">
+                    <circle cx="17" cy="17" r="10" stroke="#333" stroke-width="3" fill="none"/>
+                    <line x1="24" y1="25" x2="32" y2="32" stroke="#333" stroke-width="3"/>
+                    </svg>
+                </button>
+                <div class="search_box" id="search_box">                    
+                    <input type="text" placeholder="Search" id="input_box" class="hidden" />
+                    <button id="btn_search" class="btn_search">Go</button>
                 </div>
             </div>
             <div class="title">
                 <a href="/index.html"><p>The News-ON Times</p></a>
             </div>
-            <nav>
-                <button class="selected">All</button>
-                <button>General</button>
-                <button>Business</button>
+            <nav class="d-none d-lg-block">
+                <button class="selected">Latest</button>
                 <button>Technology</button>
                 <button>Science</button>
                 <button>Health</button>
+                <button>Business</button>
+                <button>General</button>
                 <button>Sports</button>
                 <button>Entertainment</button>
             </nav>
@@ -52,10 +62,20 @@
             </div>        
         </article>
     </main>
-
-
-
-
+    <div class="side_bar" id="side_bar">
+        <button class="btn_close" onclick="toggleSide()">&times;</button>
+        <div class="side_nav" id="side_nav">
+            <p class="side_title">Category</p>
+            <button class="selected">Latest</button>
+            <button>Technology</button>
+            <button>Science</button>
+            <button>Health</button>
+            <button>Business</button>
+            <button>General</button>
+            <button>Sports</button>
+            <button>Entertainment</button>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="scripts/main.js"></script>
