--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         <div class="page_toggle_box">
             <button onclick="togglePagePopup(event)">&lt;</button>
         </div>
+        <div class="top_short_cut">
+            <a href="#"">Top</a>
+        </div>
     </main>
     <div class="side_bar" id="side_bar">
         <button class="btn_close" onclick="toggleSide()">&times;</button>
